# ai-solutions-lab

./: .gitignore  CI_OPTIMIZATION_GUIDE.md  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  initialize_system.py  llm_config.json  pyproject.toml  requirements-ci.txt  requirements-fast.txt  requirements-test.txt  requirements.txt  test_search.py
.github/workflows/: ci.yml
data/: __init__.py
data/analytics/: analytics.json
data/docs/: __init__.py  ai_agents.md  ai_basics.md  machine_learning.md  rag_systems.md  sample.md  system_design.md
data/users/: jwt_secret.txt  users.json
src/ai_lab/: __init__.py  advanced_analytics.py  advanced_search.py  api.py  api_routes.py  app.py  cache_manager.py  cli.py  config.py  deployment_monitoring.py  document_ingestion.py  enhanced_rag.py  hybrid_search.py  llm_config.py  llm_providers.py  main_app.py  simple_rag.py  user_management.py  vector_store.py
src/ai_lab/llm/: anthropic.py  llama_cpp.py  openai.py  router.py
src/ai_lab/rag/: answer.py  ingest.py  retrieve.py
src/ai_lab/static/: analytics.html  index.html  styles.css  upload.html
src/ai_lab/templates/: 404.html  500.html  analytics.html  index.html  upload.html
src/ai_lab/tools/: math.py  registry.py  search.py  webstub.py
tests/: __init__.py  test_api.py  test_fast.py  test_rag.py  test_simple.py  test_task_b.py  test_task_c.py  test_task_d.py  test_task_e.py  test_task_f.py  test_task_f_simple.py  test_tools.py
